<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PKU IPGW Client</string>
    <string name="title">北京大学校园网IP网关认证客户端(android)</string>
    <string name="userid_text">用户名:</string>
    <string name="empty"></string>
    <string name="passwd_text">密码:</string>
    <string name="connect">连        接</string>
    <string name="disconnect">断开连接</string>
    <string name="status">状态 : </string>
    <string name="range">\n访问范围:</string>
    <string name="free">免费</string>
    <string name="global">收费</string>
    <string name="disconnect_all">断开所有连接</string>
    <string name="keep_account">保存账号</string>
    <string name="sign_automatically">自动登录</string>
    <string name="unsigned">未登录</string>
    <string name="exit">退        出</string>
    <string name="save_password">保存密码</string>
</resources>
