<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:id="@+id/title" android:text="@string/title"/>
<TextView android:id="@+id/userid_text" android:text="@string/userid_text" android:layout_height="wrap_content" android:layout_width="match_parent"></TextView>
<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="integer" android:text="@string/empty" android:id="@+id/userid" android:inputType="number" android:maxLines="1"></EditText>
<TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/passwd_text" android:text="@string/passwd_text"></TextView>
<EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:numeric="integer" android:id="@+id/password" android:text="@string/empty" android:password="true" android:inputType="textPassword" android:maxLines="1"></EditText>
<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content" android:text="@string/range" android:id="@+id/range_text" android:layout_height="match_parent"></TextView>
    <RadioGroup android:orientation="horizontal" android:layout_width="wrap_content" android:id="@+id/radioGroup1" android:layout_height="wrap_content">
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/free" android:id="@+id/free"></RadioButton>
        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/global" android:id="@+id/global"></RadioButton>
    </RadioGroup>
</LinearLayout>
<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout3" android:layout_height="wrap_content">
    <CheckBox android:layout_width="wrap_content" android:id="@+id/keep_account" android:layout_height="wrap_content" android:text="@string/keep_account"></CheckBox>
    <CheckBox android:layout_width="wrap_content" android:id="@+id/sign_automatically" android:layout_height="wrap_content" android:text="@string/sign_automatically"></CheckBox>
</LinearLayout>
<TextView android:layout_width="match_parent" android:text="@string/empty" android:id="@+id/debug" android:layout_height="wrap_content"></TextView>
<TextView android:id="@+id/status" android:layout_height="wrap_content" android:layout_width="match_parent" android:minLines="6" android:text="@string/unsigned"></TextView>
<LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
    <Button android:id="@+id/connect" android:layout_width="wrap_content" android:text="@string/connect" android:layout_height="wrap_content"></Button>
    <Button android:id="@+id/disconnect" android:layout_width="wrap_content" android:text="@string/disconnect" android:layout_height="wrap_content"></Button>
    <Button android:id="@+id/disconnect_all" android:layout_width="wrap_content" android:text="@string/disconnect_all" android:layout_height="wrap_content"></Button>
</LinearLayout>
</LinearLayout>
